--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,7 @@
 {
-  "name": "WooCommerce",
-  "app_id": "",
-  "type": "ionic-angular",
+  "name": "Naturapp 2019",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "type": "ionic-angular"
 }
