--- a/package.json
+++ b/package.json
@@ -21,19 +21,70 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
+    "@ionic-native/app-rate": "^4.5.3",
+    "@ionic-native/call-number": "^4.5.3",
     "@ionic-native/core": "4.5.3",
+    "@ionic-native/email-composer": "^4.5.3",
+    "@ionic-native/http": "^4.5.3",
+    "@ionic-native/in-app-browser": "^4.5.3",
+    "@ionic-native/native-storage": "^4.5.3",
+    "@ionic-native/network": "^4.5.3",
+    "@ionic-native/onesignal": "^4.5.3",
+    "@ionic-native/photo-viewer": "^4.5.3",
+    "@ionic-native/social-sharing": "^4.5.3",
     "@ionic-native/splash-screen": "4.5.3",
     "@ionic-native/status-bar": "4.5.3",
     "@ionic/storage": "2.1.3",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
+    "call-number": "^1.0.1",
+    "com-sarriaroman-photoviewer": "^1.1.16",
+    "cordova-android": "^8.0.0",
+    "cordova-plugin-advanced-http": "^1.11.0",
+    "cordova-plugin-apprate": "^1.3.0",
+    "cordova-plugin-email-composer": "^0.8.15",
+    "cordova-plugin-inappbrowser": "^2.0.2",
+    "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-network-information": "^2.0.1",
+    "cordova-plugin-x-socialsharing": "^5.3.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "onesignal-cordova-plugin": "^2.3.1",
+    "platform": "1.3.5",
     "rxjs": "5.5.7",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
-    "typescript": "~2.6.2"
+    "typescript": "~2.6.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-keyboard": "^2.0.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-apprate": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-email-composer": {},
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-nativestorage": {},
+      "mx.ferreyra.callnumber": {},
+      "com-sarriaroman-photoviewer": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
